--- a/views/number.ejs
+++ b/views/number.ejs
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>Random Event that happed in the year <%= year%></h1>
+              <h1>Random Event that happend in the year <%= year%></h1>
 
             </div>
           </div>
@@ -77,28 +77,37 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-        <h3>  <p><%= quote%></p></h3>
 
 
-        <form  action="/number" method="post">
-          <label for="city">Year: </label>
-          <input type="text" name="number" placeholder="example 2012" value="">
-          <button type="submit" class="btn btn-dark" name="button">Submit</button>
-
-        </form>
-
-        <div class="">
-          <h1> </h1>
-
-        </div>
 
 
-        </div>
-      </div>
-    </div>
+
+
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 col-md-10 mx-auto">
+                <h3>  <p><%= quote%></p></h3>
+
+                <form action="/number" method="post" name="sentMessage" id="contactForm" novalidate >
+                  <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                      <label>Year</label>
+                      <input type="text"  name="number" class="form-control" placeholder="example 2012" id="name" required data-validation-required-message="example Brazil">
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+
+
+
+                  <br>
+                  <div id="success"></div>
+                  <div class="form-group">
+                    <button type="submit" class="btn btn-dark" id="sendMessageButton">Submit</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
 
 
     <hr>
